// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movies Tab Overview:  correctly renders with data 1`] = `
<Fragment>
  <div
    className="movie-rating"
  >
    <div
      className="movie-rating__score"
    >
      7.3
    </div>
    <p
      className="movie-rating__meta"
    >
      <span
        className="movie-rating__level"
      >
        Good
      </span>
      <span
        className="movie-rating__count"
      >
        10 ratings
      </span>
    </p>
  </div>
  <p
    className="movie-card__text"
  >
    Test Overview
  </p>
</Fragment>
`;

exports[`Movies Tab Overview:  correctly renders without data 1`] = `
<Fragment>
  <div
    className="movie-rating"
  >
    <div
      className="movie-rating__score"
    >
      0
    </div>
    <p
      className="movie-rating__meta"
    >
      <span
        className="movie-rating__level"
      >
        Bad
      </span>
      <span
        className="movie-rating__count"
      >
        0 ratings
      </span>
    </p>
  </div>
  <p
    className="movie-card__text"
  />
</Fragment>
`;
